--- a/index.html
+++ b/index.html
@@ -465,11 +465,18 @@
             </div>
         </div>
 
-        <button id="global-buzzer" onclick="game.handleBuzzer()"
-            class="hidden fixed bottom-8 left-1/2 -translate-x-1/2 w-32 h-32 bg-red-600 text-white rounded-full font-black text-xl shadow-[0_15px_40px_rgba(220,38,38,0.4)] hover:scale-105 active:scale-95 transition-all flex items-center justify-center border-8 border-red-500 uppercase z-[60]">
-            Buzz!
-        </button>
+
         <div id="screen-game" class="hidden flex flex-col items-center">
+            <!-- Multiplayer turn indicator (MOVED TO TOP) -->
+            <div id="multiplayer-turn-indicator"
+                class="hidden w-full mb-6 rounded-2xl p-4 border-2 transition-all duration-300">
+                <div id="turn-role-badge" class="role-badge hidden"></div>
+                <div class="text-lg font-black uppercase tracking-tight leading-none mb-1" id="turn-indicator-text">
+                    Your
+                    turn!</div>
+                <div class="text-xs font-bold opacity-80" id="turn-indicator-subtext"></div>
+            </div>
+
             <div id="card-container"
                 class="w-full bg-white rounded-[2rem] shadow-xl border-4 border-pink-100 p-8 mb-8 text-center min-h-[380px] flex flex-col justify-between">
                 <div>
@@ -499,6 +506,8 @@
                 </button>
             </div>
 
+
+
             <!-- Start round button for active player -->
             <div id="multiplayer-start-round" class="hidden w-full mb-8">
                 <button onclick="game.startMultiplayerRound()"
@@ -508,19 +517,13 @@
             </div>
 
             <!-- Multiplayer buzzer for opposing players -->
-            <div id="multiplayer-buzzer-container" class="hidden w-full mb-8">
+            <div id="multiplayer-buzzer-container" class="hidden w-full mb-8 flex flex-col items-center">
+                <button id="global-buzzer" onclick="game.handleBuzzer()"
+                    class="hidden w-32 h-32 bg-red-600 text-white rounded-full font-black text-xl shadow-[0_15px_40px_rgba(220,38,38,0.4)] hover:scale-105 active:scale-95 transition-all flex items-center justify-center border-8 border-red-500 uppercase mb-4">
+                    Buzz!
+                </button>
                 <p class="text-[10px] text-slate-400 font-bold uppercase mt-2 text-center">Buzz if you hear a taboo
                     word!</p>
-            </div>
-
-            <!-- Multiplayer turn indicator -->
-            <div id="multiplayer-turn-indicator"
-                class="hidden w-full mb-4 rounded-2xl p-4 border-2 transition-all duration-300">
-                <div id="turn-role-badge" class="role-badge hidden"></div>
-                <div class="text-lg font-black uppercase tracking-tight leading-none mb-1" id="turn-indicator-text">
-                    Your
-                    turn!</div>
-                <div class="text-xs font-bold opacity-80" id="turn-indicator-subtext"></div>
             </div>
 
             <!-- Waiting for player message -->
@@ -1093,9 +1096,14 @@
 
                     const roomData = snapshot.val();
                     if (roomData.gameState && roomData.gameState.status === 'playing') {
-                        // Allow joining during game but show message
-                        const joinDuringGame = confirm('Game is already in progress. You can join as a spectator. Continue?');
-                        if (!joinDuringGame) return false;
+                        // Check if there are actually any active players
+                        const activePlayers = Object.values(roomData.players || {}).filter(p => p.online !== false);
+
+                        if (activePlayers.length > 0) {
+                            // Allow joining during game but show message only if there are people playing
+                            const joinDuringGame = confirm('Game is already in progress. You can join as a spectator. Continue?');
+                            if (!joinDuringGame) return false;
+                        }
                     }
 
                     // Check player limit (8 players max)
@@ -1699,7 +1707,16 @@
 
             async endGame() {
                 if (!this.roomRef) return;
-                await this.roomRef.child('gameState/status').set('finished');
+
+                // robustly clear game state
+                await this.roomRef.child('gameState').update({
+                    status: 'finished',
+                    roundActive: false,
+                    forcedFinish: null,
+                    promptFinish: null,
+                    currentCard: null,
+                    timer: 60 // Reset timer to standard to stop any weird loops
+                });
 
                 // Hide any visible turn indicators
                 const turnIndicator = document.getElementById('multiplayer-turn-indicator');
@@ -1976,16 +1993,21 @@
                     }
                 } else {
                     if (startRoundBtn) startRoundBtn.classList.add('hidden');
+
+                    // Only show waiting message if round is NOT active (i.e. waiting to start)
                     if (waitingMsg) {
-                        waitingMsg.classList.remove('hidden');
-                        waitingMsg.querySelector('#waiting-text').textContent = roundActive ?
-                            `${currentPlayerName} is describing...` :
-                            `Waiting for ${currentPlayerName} to start their round...`;
+                        if (roundActive) {
+                            waitingMsg.classList.add('hidden');
+                        } else {
+                            waitingMsg.classList.remove('hidden');
+                            waitingMsg.querySelector('#waiting-text').textContent = `Waiting for ${currentPlayerName} to start their round...`;
+                        }
                     }
+
                     if (turnIndicator) {
                         turnIndicator.querySelector('#turn-indicator-text').textContent = isTeamMode ? `Team ${activeTeam} is up!` : `${currentPlayerName}'s Turn`;
                         if (isTeamMode) {
-                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is talking`;
+                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing`;
                         } else {
                             turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing, you need to guess!`;
                         }
@@ -3021,6 +3043,8 @@
                         leaveBtn.classList.remove('hidden');
                         leaveBtn.textContent = 'Leave & End Game';
                         leaveBtn.className = "w-full bg-orange-500 text-white py-3 rounded-xl font-bold";
+                        // Use a specific action that triggers END GAME then LEAVE
+                        leaveBtn.setAttribute('onclick', "game.confirmLeaveAction('leaveAndEnd')");
                     }
                     if (leaveWarn) {
                         leaveWarn.classList.remove('hidden');
@@ -3034,6 +3058,13 @@
                     if (leaveBtn) {
                         leaveBtn.classList.remove('hidden');
                         leaveBtn.textContent = 'Leave Game';
+                        leaveBtn.className = "w-full bg-orange-500 text-white py-3 rounded-xl font-bold";
+                        leaveBtn.setAttribute('onclick', "game.confirmLeaveAction('leave')");
+                    }
+                    if (leaveWarn) leaveWarn.classList.add('hidden');
+
+                    // Show "End for All" only for host as an extra option
+                    if (endForAllBtn) {
                         leaveBtn.className = "w-full bg-orange-500 text-white py-3 rounded-xl font-bold";
                     }
                     if (leaveWarn) leaveWarn.classList.add('hidden');
@@ -3082,7 +3113,7 @@
                 const confirmModal = document.getElementById('modal-confirm-leave');
                 const confirmText = document.getElementById('confirm-leave-text');
 
-                if (action === 'endAll') {
+                if (action === 'endAll' || action === 'leaveAndEnd') {
                     confirmText.textContent = 'This will end the game for all players. Are you sure?';
                 } else {
                     confirmText.textContent = 'You will leave the game. Are you sure?';
@@ -3102,9 +3133,13 @@
                 if (modal) modal.classList.add('hidden');
 
                 if (this.pendingLeaveAction === 'endAll') {
-                    // End game for all players - set status to finished
-                    // Don't leave the room, let players see the end game screen
+                    // End game for all players (Host only feature) - stay in room
                     await this.multiplayer.endGame();
+                } else if (this.pendingLeaveAction === 'leaveAndEnd') {
+                    // Force end game first
+                    await this.multiplayer.endGame();
+                    // THEN leave
+                    await this.multiplayer.leaveRoom();
                 } else {
                     // Just leave the room
                     await this.multiplayer.leaveRoom();
