fix: standardize turn indicator subtext message to consistently prompt players to guess.

--- a/index.html
+++ b/index.html
@@ -2007,9 +2007,9 @@
                     if (turnIndicator) {
                         turnIndicator.querySelector('#turn-indicator-text').textContent = isTeamMode ? `Team ${activeTeam} is up!` : `${currentPlayerName}'s Turn`;
                         if (isTeamMode) {
-                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing`;
+                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing. Guess the word!`;
                         } else {
-                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing, you need to guess!`;
+                            turnIndicator.querySelector('#turn-indicator-subtext').textContent = `${currentPlayerName} is describing. Guess the word!`;
                         }
                     }
                 }
