--- a/index.html
+++ b/index.html
@@ -442,32 +442,8 @@
             <p id="total-card-count" class="text-[10px] font-black text-primary uppercase mb-4 tracking-widest">
                 Loading...</p>
 
-            <!-- Language Selection (Step 1) -->
-            <div class="mb-6">
-                <div class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center">1. Select
-                    Language</div>
-                <div class="flex gap-4">
-                    <button id="lang-fr" onclick="game.setLanguage('fr')"
-                        class="flex-1 py-4 rounded-2xl bg-white border-4 border-slate-100 shadow-sm transition-all hover:scale-105 active:scale-95 group">
-                        <div class="text-4xl mb-1 group-hover:scale-110 transition-transform"><span
-                                class="emoji-fr">🇫🇷</span></div>
-                        <div
-                            class="text-xs font-black text-slate-400 uppercase tracking-wider group-[.selected]:text-primary">
-                            Français</div>
-                    </button>
-                    <button id="lang-en" onclick="game.setLanguage('en')"
-                        class="flex-1 py-4 rounded-2xl bg-white border-4 border-slate-100 shadow-sm transition-all hover:scale-105 active:scale-95 group">
-                        <div class="text-4xl mb-1 group-hover:scale-110 transition-transform"><span
-                                class="emoji-en">🇬🇧</span></div>
-                        <div
-                            class="text-xs font-black text-slate-400 uppercase tracking-wider group-[.selected]:text-primary">
-                            English</div>
-                    </button>
-                </div>
-            </div>
-
-            <!-- Mode Tabs (Step 2) -->
-            <div class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center">2. Connection
+            <!-- Mode Tabs (Step 1) -->
+            <div class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center">1. Connection
                 Mode</div>
             <div class="flex bg-slate-100 p-1 rounded-2xl mb-6 shadow-inner">
                 <button id="tab-local" onclick="game.setTab('local')"
@@ -482,11 +458,36 @@
 
             <!-- Tab Content: Local -->
             <div id="content-local" class="space-y-6">
+                <!-- Language Selection (Step 2) -->
+                <div class="mb-6">
+                    <div class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center">2.
+                        Select
+                        Language</div>
+                    <div class="flex gap-4">
+                        <button id="lang-fr" onclick="game.setLanguage('fr')"
+                            class="flex-1 py-4 rounded-2xl bg-white border-4 border-slate-100 shadow-sm transition-all hover:scale-105 active:scale-95 group">
+                            <div class="text-4xl mb-1 group-hover:scale-110 transition-transform"><span
+                                    class="emoji-fr">🇫🇷</span></div>
+                            <div
+                                class="text-xs font-black text-slate-400 uppercase tracking-wider group-[.selected]:text-primary">
+                                Français</div>
+                        </button>
+                        <button id="lang-en" onclick="game.setLanguage('en')"
+                            class="flex-1 py-4 rounded-2xl bg-white border-4 border-slate-100 shadow-sm transition-all hover:scale-105 active:scale-95 group">
+                            <div class="text-4xl mb-1 group-hover:scale-110 transition-transform"><span
+                                    class="emoji-en">🇬🇧</span></div>
+                            <div
+                                class="text-xs font-black text-slate-400 uppercase tracking-wider group-[.selected]:text-primary">
+                                English</div>
+                        </button>
+                    </div>
+                </div>
                 <!-- Level Selection -->
                 <!-- Level Selection (Step 3) -->
                 <div>
                     <div class="text-[10px] font-black text-slate-400 uppercase mb-2 tracking-widest text-center">3.
-                        select Difficulty</div>
+                        Select
+                        Difficulty</div>
                     <div class="grid grid-cols-2 gap-3">
                         <button
                             class="level-btn p-4 rounded-2xl bg-white border-2 border-slate-100 transition-all text-left opacity-50 cursor-not-allowed"
