refactor: update "Correct!" button background color from primary to green-500.

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                     Buzzed
                 </button>
                 <button id="btn-correct" onclick="game.nextCard(true)"
-                    class="btn-3d flex-[2] bg-primary text-white py-4 rounded-2xl font-black text-lg">
+                    class="btn-3d flex-[2] bg-green-500 text-white py-4 rounded-2xl font-black text-lg">
                     Correct! ✅
                 </button>
             </div>
