style: Update online play section colors from blue to slate.

--- a/index.html
+++ b/index.html
@@ -544,14 +544,14 @@
 
             <!-- Tab Content: Online -->
             <div id="content-online" class="hidden space-y-6">
-                <div class="bg-blue-50 p-6 rounded-3xl border border-blue-100 space-y-4">
+                <div class="bg-slate-50 p-6 rounded-3xl border border-slate-100 space-y-4">
                     <div class="text-center">
-                        <div class="text-xl font-black text-blue-600 mb-1">Play with Friends</div>
-                        <p class="text-xs text-blue-400 font-medium">Create a private room and share the code</p>
+                        <div class="text-xl font-black text-slate-800 mb-1">Play with Friends</div>
+                        <p class="text-xs text-slate-400 font-medium">Create a private room and share the code</p>
                     </div>
 
                     <input id="input-host-name" type="text" maxlength="20" placeholder="Your Name (Optional)"
-                        class="w-full px-4 py-3 rounded-xl border-2 border-blue-100 text-center text-lg font-bold bg-white">
+                        class="w-full px-4 py-3 rounded-xl border-2 border-slate-200 text-center text-lg font-bold bg-white">
 
                     <button onclick="game.createRoom()"
                         class="btn-3d w-full bg-slate-800 text-white py-4 rounded-2xl text-lg font-black shadow-lg">
